# presto-lvgl-boilerplate

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.sh  flash.sh  lv_conf.h
src/: display_config.hpp  lvgl_port.cpp  lvgl_port.hpp  lvgl_psram_pool.h  main.cpp
src/demo/: demo_hw.hpp  demo_main.cpp  demo_ui.hpp  hw_buzzer.cpp  hw_leds.cpp  hw_sdcard.cpp  hw_wifi.cpp  ui_home.cpp  ui_leds.cpp  ui_paint.cpp  ui_sound.cpp  ui_system.cpp  ui_wifi.cpp
